--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-	"name": "vindulafernando.com",
-	"version": "1.0.0",
-	"private": true,
-	"dependencies": {
-		"date-fns": "^1.28.5",
-		"react": "^15.6.1",
-		"react-dom": "^15.6.1",
-		"react-scripts": "1.0.10"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	}
+  "name": "vindulafernando.com",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "date-fns": "^1.28.5",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-ga": "^2.2.0",
+    "react-scripts": "1.0.10"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
